# Ecommerce-DRF

./: .env-sample  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: django.yml  test_lint.yaml  test_sec.yaml
ecommerce/: asgi.py  wsgi.py
ecommerce/settings/: dev.py
