[project]
name = "ecommerce-drf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "celery>=5.4.0",
    "django-debug-toolbar>=5.0.1",
    "django>=5.1.6",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.4.0",
    "django-filter>=25.1",
    "django-redis>=5.4.0",
    "djoser>=2.3.1",
    "django-silk>=5.3.2",
    "drf-nested-routers>=0.94.1",
    "pillow>=11.1.0",
    "psycopg[binary,pool]>=3.2.4",
    "redis>=5.2.1",
    "pytest>=8.3.4",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "django-cors-headers>=4.7.0",
    "whitenoise>=6.9.0",
    "django-csp>=3.8",
    "drf-spectacular-sidecar>=2025.2.1",
    "flake8"
]
